// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple Instance Container does not render if unknown containerNumber - container number too high 1`] = `<div />`;

exports[`Multiple Instance Container does not render if unknown containerNumber 1`] = `<div />`;

exports[`Multiple Instance Container does not render if unknown containerTemplateId 1`] = `<div />`;

exports[`Multiple Instance Container does not render if unknown storageAreaId 1`] = `<div />`;

exports[`Multiple Instance Container renders correctly 1`] = `
<div>
  <div
    class="container-details with-location"
  >
    <header>
      <h1>
        Trauma Tower
        <br />
        Trauma Chest Drain - Box 3
      </h1>
      <button
        aria-label="back"
        class="back"
        type="button"
      >
        <svg>
          arrow-left.svg
        </svg>
      </button>
      <button
        class="full"
        type="button"
      >
        FULL
      </button>
    </header>
    <main>
      <div
        class="scroll"
      >
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Blunt dissection chest drainage insertion pack (28Fg)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Sterile gloves (Small)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Sterile gloves (Medium)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Sterile gloves (Large)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Chest drain catheter (28Fr)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Chest drain catheter (32Fr)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Chest drain catheter (36Fr)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            ChloraPrep applicator (3ml)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                2
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Lidocaine 1% vial (5ml / 50mg)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                2
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Suture pack (Standard)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Mefix roll (5cm x 10m)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Chest drain bottle
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Chest drain tubing
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Sterile water (H20) bottle (1000ml bottle)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Spencer wells forceps (Straight 20cm)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
      </div>
    </main>
    <footer>
      <div
        class="container-locations"
      >
        <label
          for="location"
        >
          Location
        </label>
        <select
          id="location"
          name="location"
        >
          <option
            value="Resus Stock Cupboard"
          >
            Resus Stock Cupboard
          </option>
          <option
            value="Resus 1a"
          >
            Resus 1a
          </option>
          <option
            value="Resus 1b"
          >
            Resus 1b
          </option>
          <option
            value="Resus 1c"
          >
            Resus 1c
          </option>
          <option
            value="Resus 2"
          >
            Resus 2
          </option>
          <option
            value="Ward Clerk's Desk"
          >
            Ward Clerk's Desk
          </option>
        </select>
      </div>
      <button
        class="save"
        type="button"
      >
        Save
      </button>
    </footer>
  </div>
</div>
`;

exports[`Single Instance Container renders correctly 1`] = `
<div>
  <div
    class="container-details "
  >
    <header>
      <h1>
        Airway Trolley 2
        <br />
        Side
      </h1>
      <button
        aria-label="back"
        class="back"
        type="button"
      >
        <svg>
          arrow-left.svg
        </svg>
      </button>
      <button
        class="full"
        type="button"
      >
        FULL
      </button>
    </header>
    <main>
      <div
        class="scroll"
      >
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Aintree Catheter
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                1
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
        <div
          class="item"
        >
          <div
            class="display-name"
          >
            Bougie (Cook Frova)
          </div>
          <div
            class="controls"
          >
            <button
              aria-label="item information"
              class="item-info"
              type="button"
            >
              <svg>
                info-circle.svg
              </svg>
            </button>
            <div
              class="quantity"
            >
              <span
                class="actual-quantity-bad"
              >
                0
              </span>
              <span>
                 / 
              </span>
              <span
                class="expected-quantity"
              >
                2
              </span>
            </div>
            <button
              aria-label="remove item"
              class="change-quantity"
              disabled=""
              type="button"
            >
              <svg>
                minus.svg
              </svg>
            </button>
            <button
              aria-label="add item"
              class="change-quantity"
              type="button"
            >
              <svg>
                add.svg
              </svg>
            </button>
          </div>
        </div>
      </div>
    </main>
    <footer>
      <button
        class="save"
        type="button"
      >
        Save
      </button>
    </footer>
  </div>
</div>
`;
